Fix bugs, add init javascript files.

--- a/lib/nanoc-lunrjs/assets/templates/search_field/nanoc_lunrjs_search.haml
+++ b/lib/nanoc-lunrjs/assets/templates/search_field/nanoc_lunrjs_search.haml
@@ -2,5 +2,5 @@
   .input-group.controls
     %input.form-control{ type: 'search', placeholder: 'Search...' }
     %span.input-group-btn
-      %button.btn.btn-default.all{ type: 'button' }
+      %button.btn.btn-default.search-all{ type: 'button' }
         %i.glyphicon.glyphicon-search
