Add lunrjs support, add partials to simplify usage

--- a/lib/nanoc-lunrjs/assets/templates/search_field/nanoc_lunrjs_init.haml
+++ b/lib/nanoc-lunrjs/assets/templates/search_field/nanoc_lunrjs_init.haml
@@ -1,3 +1,11 @@
 - path = path.split('/')[-2..-1].join('/')
 - scripts.each do |script|
   %script{ src: "/#{path}/#{script}", type: 'text/javascript' }
+
+:javascript
+  $('#nanoc-lunrjs-search input#query').lunrSearch({
+    indexUrl: '/search.json',
+    results:  '#nanoc-lunrjs-results',
+    entries:  '.entries',
+    template: '#nanoc-lunrjs-results-template'
+  });
