--- a/lib/nanoc-lunrjs/assets/templates/search_field/nanoc_lunrjs_search.haml
+++ b/lib/nanoc-lunrjs/assets/templates/search_field/nanoc_lunrjs_search.haml
@@ -1,6 +1,6 @@
 #nanoc-lunrjs-search
   .input-group.controls
-    %input.form-control{ type: 'search', placeholder: 'Search...' }
+    %input#query.form-control{ type: 'search', placeholder: 'Search...' }
     %span.input-group-btn
       %button.btn.btn-default.search-all{ type: 'button' }
         %i.glyphicon.glyphicon-search
